==> apache/nuttx/arch/arm/src/xmc4/xmc4_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <errno.h>
#include <assert.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/wdog.h>
#include <nuttx/kmalloc.h>
#include <nuttx/clock.h>
#include <nuttx/mutex.h>
#include <nuttx/spi/spi.h>
#include "arm_internal.h"
#include "chip.h"
#include "xmc4_gpio.h"
#include "xmc4_spi.h"
#include "xmc4_usic.h"
#include "hardware/xmc4_spi.h"
#include "hardware/xmc4_usic.h"
#include "hardware/xmc4_pinmux.h"
#  define CONFIG_XMC4_SPI_DMATHRESHOLD 4
#    define XMC4_SPI0_DMA true
#    define XMC4_SPI0_DMA false
#    define XMC4_SPI1_DMA true
#    define XMC4_SPI1_DMA false
#    define XMC4_SPI2_DMA true
#    define XMC4_SPI2_DMA false
#    define XMC4_SPI3_DMA true
#    define XMC4_SPI3_DMA false
#    define XMC4_SPI4_DMA true
#    define XMC4_SPI4_DMA false
#    define XMC4_SPI5_DMA true
#    define XMC4_SPI5_DMA false
#  define XMC4_SPI_CLOCK        BOARD_PERIPH_FREQUENCY /* Frequency of the
#define DMA_TIMEOUT_MS          (800)
#define DMA_TIMEOUT_TICKS       MSEC2TICK(DMA_TIMEOUT_MS)
#define XMC_SPI_OVERSAMPLING    (2UL)
#define DMA_INITIAL         0
#define DMA_AFTER_SETUP     1
#define DMA_AFTER_START     2
#define DMA_CALLBACK        3
#define DMA_TIMEOUT         3
#define DMA_END_TRANSFER    4
#define DMA_NSAMPLES        5

static inline uint32_t spi_getreg(struct xmc4_spidev_s *spi,
                                  unsigned int offset)
{
  uint32_t  address = spi->base + offset;
  uint32_t  value   = getreg32(address);

#ifdef CONFIG_XMC4_SPI_REGDEBUG
  if (spi_checkreg(spi, false, value, address))
    {
      spiinfo("%08x->%08x\n", address, value);
    }
#endif

  return value;
}

static inline void spi_putreg(struct xmc4_spidev_s *spi, uint32_t value,
                              unsigned int offset)
{
  uint32_t address = spi->base + offset;

#ifdef CONFIG_XMC4_SPI_REGDEBUG
  if (spi_checkreg(spi, true, value, address))
    {
      spiinfo("%08x<-%08x\n", address, value);
    }
#endif

  putreg32(value, address);
}

static int spi_lock(struct spi_dev_s *dev, bool lock)
{
  struct xmc4_spics_s *spics = (struct xmc4_spics_s *)dev;
  struct xmc4_spidev_s *spi = spi_device(spics);
  int ret;

  spiinfo("lock=%d\n", lock);
  if (lock)
    {
      ret = nxmutex_lock(&spi->spilock);
    }
  else
    {
      ret = nxmutex_unlock(&spi->spilock);
    }

  return ret;
}

static uint32_t spi_setfrequency(struct spi_dev_s *dev, uint32_t frequency)
{
  struct xmc4_spics_s *spics = (struct xmc4_spics_s *)dev;
  int channel = spics->spino;
  int ret;

  spiinfo("cs=%d frequency=%d\n", spics->cs, frequency);

  /* Check if the red frequency is the same as the frequency selection */

  if (spics->frequency == frequency)
    {
      /* We are already at this frequency.  Return the actual. */

      return frequency;
    }

  /* Set SPI frequency (USIC baudrate) */

  ret = xmc4_usic_baudrate(channel, frequency, XMC_SPI_OVERSAMPLING);
  if (ret < 0)
    {
      spierr("Setting frequency to %d failed!\n", frequency);
      return 0;
    }

  /* Save the frequency setting */

  spics->frequency = frequency;

  spiinfo("Frequency configured to %d\n", frequency);

  return frequency;
}

static void spi_setmode(struct spi_dev_s *dev, enum spi_mode_e mode)
{
  struct xmc4_spics_s *spics = (struct xmc4_spics_s *)dev;
  struct xmc4_spidev_s *spi = spi_device(spics);
  uint32_t regval;

  spiinfo("cs=%d mode=%d\n", spics->cs, mode);

  /* Has the mode changed? */

  if (mode != spics->mode)
    {
      /* Yes... Set the mode appropriately:
       *
       * SPI  CPOL  CPHA
       * MODE
       *  0    0    0
       *  1    0    1
       *  2    1    0
       *  3    1    1
       */

      regval  = spi_getreg(spi, XMC4_USIC_BRG_OFFSET);
      regval &= ~(USIC_BRG_SCLKCFG_MASK);

      switch (mode)
        {
        case SPIDEV_MODE0: /* CPOL=0; CPHA=0 */
          regval |= XMC4_SPI_MODE0;
          break;

        case SPIDEV_MODE1: /* CPOL=0; CPHA=1 */
          regval |= XMC4_SPI_MODE1;
          break;

        case SPIDEV_MODE2: /* CPOL=1; CPHA=0 */
          regval |= XMC4_SPI_MODE2;
          break;

        case SPIDEV_MODE3: /* CPOL=1; CPHA=1 */
          regval |= XMC4_SPI_MODE3;
          break;

        default:
          DEBUGASSERT(FALSE);
          return;
        }

      spi_putreg(spi, regval, XMC4_USIC_BRG_OFFSET);
      spiinfo("USIC BRG = %08x\n", regval);

      /* Save the mode so that subsequent re-configurations will be faster */

      spics->mode = mode;
    }
}

static void spi_setbits(struct spi_dev_s *dev, int nbits)
{
  struct xmc4_spics_s *spics = (struct xmc4_spics_s *)dev;
  struct xmc4_spidev_s *spi = spi_device(spics);
  uint32_t regval;

  spiinfo("cs=%d nbits=%d\n", spics->cs, nbits);
  DEBUGASSERT(nbits > 7 && nbits < 17);

  /* Has the number of bits changed? */

  if (nbits != spics->nbits)
    {
      /* Yes... Configure the new word length */

      regval  = spi_getreg(spi, XMC4_USIC_SCTR_OFFSET);
      regval &= ~(USIC_SCTR_WLE_MASK);
      regval |= USIC_SCTR_WLE(nbits);
      spi_putreg(spi, regval, XMC4_USIC_SCTR_OFFSET);

      spiinfo("SCTR = %08x\n", regval);

      /* Save the selection so that subsequent re-configs will be faster. */

      spics->nbits = nbits;
    }
}
